# CFG

./: CFG.cpp  CFG.h  CFG_testfile2.cpp  CMakeLists.txt  CNF_testfile.cpp  CYK_testfile.cpp  Components.cpp  Components.h  LL_testfile.cpp  README.md  Tree.cpp  Tree.h
